# baobab_activity_reporting

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_dev_constraints.md  01_target_architecture.md  02_specifications.md  dev_diary.md  document_writers.md  end_to_end_pipeline.md  kpi_metrics_catalog.md  report_types.md
docs/features/: 01_project_bootstrap.md  02_domain_models_and_exceptions.md  03_csv_ingestion.md  04_standardization_and_validation.md  05_business_resolution.md  06_sqlite_persistence.md  07_kpi_computation.md  08_report_planning_and_builder.md  09_document_writers.md  10_application_service_and_cli.md  11_editorial_report_definitions.md
src/baobab_activity_reporting/: __init__.py
src/baobab_activity_reporting/application/: __init__.py  compute_metrics_use_case.py  generate_report_use_case.py  import_sources_use_case.py  report_definition_resolver.py  reporting_service.py
src/baobab_activity_reporting/cli/: __init__.py  main.py
src/baobab_activity_reporting/core/: __init__.py  package_metadata.py
src/baobab_activity_reporting/domain/: __init__.py
src/baobab_activity_reporting/exceptions/: __init__.py  application_exception.py  configuration_exception.py  extraction_error.py  kpi_computation_error.py  persistence_error.py  report_generation_error.py  reporting_error.py  resolution_error.py  standardization_error.py  validation_error.py  writer_error.py
src/baobab_activity_reporting/ingestion/: __init__.py
src/baobab_activity_reporting/processing/: __init__.py
src/baobab_activity_reporting/reporting/: __init__.py  agent_breakdown_narrative_writer.py  agent_contribution_insight_writer.py  agent_contribution_narrative_writer.py  attention_points_insight_writer.py  attention_points_narrative_writer.py  conclusion_insight_writer.py  conclusion_narrative_writer.py  dimensional_breakdown_insight_writer.py  exploitable_section_catalog.py  fallback_section_insight_writer.py  fallback_section_narrative_writer.py  insight_builder.py  kpi_value_assessor.py  narrative_builder.py  narrative_kpi_accessor.py  report_builder.py  report_context.py  report_definition.py  report_lead_narrative_writer.py  report_model.py  report_planner.py  section_attention_signal_analyzer.py  section_dimensional_breakdown_eligibility_gate.py  section_editorial_context.py  section_eligibility_evaluator.py  section_telephony_eligibility_gate.py  section_ticket_channel_eligibility_gate.py  site_breakdown_narrative_writer.py  site_workload_insight_writer.py  site_workload_narrative_writer.py  table_builder.py  telephony_activity_insight_writer.py  telephony_activity_narrative_writer.py  telephony_overview_insight_writer.py  telephony_overview_narrative_writer.py  ticket_channels_insight_writer.py  ticket_channels_narrative_writer.py  ticket_processing_insight_writer.py  (+5 more)
tests/: conftest.py
tests/fixtures/: empty.csv  incoming_calls.csv  incoming_calls_missing_cols.csv  malformed.csv  outgoing_calls.csv  tickets.csv
(+188 files in other folders)
